fixed spacing and page names

--- a/frontend/src/components/Header/Header.module.scss
+++ b/frontend/src/components/Header/Header.module.scss
@@ -4,7 +4,7 @@
 
     h1 {
         font: {
-            size: 2rem;
+            size: 2.5rem;
             weight: 400;
         }
         margin-bottom: 0;
@@ -16,6 +16,8 @@
         margin-bottom: 0;
         font-size: 1rem;
     }
+    margin-top: 2rem;
+    margin-bottom:2rem;
 }
 
 .logo {
